<resources>
    <string name="app_name">Car Rent</string>
    <string name="cartoon_car">Cartoon Car</string>
    <string name="book_your_next_ride_now">Book your next ride now!</string>
    <string name="logo">logo</string>
    <string name="sign_in_to_continue">Sign in to continue!</string>
    <string name="username">Username</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_user_sign_up_now">New User? SIGN UP NOW!</string>
    <string name="hello_there_welcome_back">Hello there, Welcome back!</string>
    <string name="welcome">Welcome!</string>
    <string name="signup_to_start_your_new_journey">SignUp to start your new journey.</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="go">Go</string>
    <string name="already_have_an_account_login_now">Already have an account? LogIn</string>
    <string name="create_your_new_account">Create Your New Account</string>
    <string name="iamsatyam17">iamsatyam17</string>
    <string name="profile_image">Profile Image</string>
    <string name="payment_icon">Payment Icon</string>
    <string name="_123">$123</string>
    <string name="payment">Payment</string>
    <string name="booking">Booking</string>
    <string name="_83">83</string>
    <string name="satyam_sharma">Satyam Sharma</string>
    <string name="admin_carrent_com">admin@carrent.com</string>
    <string name="_9876543210">9876543210</string>
    <string name="password">Password</string>
    <string name="_12345678">12345678</string>
    <string name="update">Update</string>
    <string name="verify_phone_number">VERIFY PHONE NUMBER</string>
    <string name="enter_verification_code_here_if_not_automatically_authenticated">Enter verification code here if not automatically authenticated.</string>
    <string name="enter_otp_here">Enter OTP here!</string>
    <string name="verify">VERIFY</string>
    <string name="welcome_to_car_rent">Welcome to Car Rent!</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>