<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="logo_image"
        android:src="@drawable/cartooncar"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:fontFamily="@font/bungee"
        android:text="@string/hello_there_welcome_back"
        android:lineSpacingExtra="10dp"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:textColor="@color/black"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/username"
        app:hintTextColor="#757575"
        android:textColorHint="#757575"
        android:layout_marginBottom="5dp"
        app:boxStrokeColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            app:hintTextColor="#757575"
            android:textColorHint="#757575"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textColor="@color/black"
        android:text="@string/forget_password"
        android:layout_gravity="end"
        android:elevation="0dp"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textColor="@color/black"
        android:text="@string/new_user_sign_up_now"
        android:fontFamily="@font/antic"
        android:layout_gravity="center"
        android:elevation="0dp"
        android:layout_margin="5dp"/>

    </LinearLayout>

</LinearLayout>