<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#6f95ce"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/avatar"
                android:contentDescription="@string/profile_image" />

            <TextView
                android:id="@+id/fullname_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/profile_image"
                android:fontFamily="@font/bungee"
                android:includeFontPadding="false"
                android:text="@string/satyam_sharma"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/username_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fullname_field"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/profile_image"
                android:includeFontPadding="false"
                android:text="@string/iamsatyam17"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#6f95ce"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/payment"
                        android:contentDescription="@string/payment_icon" />

                    <TextView
                        android:id="@+id/payment_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/bungee"
                        android:includeFontPadding="false"
                        android:text="@string/_123"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/payment_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/payment_label"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/payment"
                        android:textSize="14sp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#6f95ce"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/booking"
                        android:contentDescription="@string/booking" />

                    <TextView
                        android:id="@+id/booking_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/bungee"
                        android:includeFontPadding="false"
                        android:text="@string/_83"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/booking_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/booking_label"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/booking"
                        android:textSize="14sp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/full_name"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#fff"
                    android:drawableStart="@drawable/icon"
                    android:drawablePadding="10dp"
                    android:text="@string/satyam_sharma"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/e_mail"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#fff"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="10dp"
                    android:text="@string/admin_carrent_com"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_no_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_number"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#fff"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:text="@string/_9876543210"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                app:hintTextColor="#757575"
                android:textColorHint="#757575"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#fff"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="10dp"
                    android:text="@string/_12345678"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#6f95ce"
                android:fontFamily="@font/bungee"
                android:onClick="update"
                android:text="@string/update"
                android:textColor="@color/black"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>