<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/cartooncar"
        android:transitionName="logo_image"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/bungee"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="-20dp"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/slogan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_to_start_your_new_journey"
        android:fontFamily="@font/antic"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:transitionName="logo_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            app:hintTextColor="#757575"
            android:textColorHint="#757575"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:hintTextColor="#757575"
            android:textColorHint="#757575"
            app:boxStrokeColor="@color/black"
            app:counterMaxLength="15"
            app:counterEnabled="true"
            app:counterTextColor="@color/black"
            android:transitionName="username_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            app:hintTextColor="#757575"
            android:textColorHint="#757575"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_phoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:hintTextColor="#757575"
            android:textColorHint="#757575"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintTextColor="#757575"
            android:textColorHint="#757575"
            app:passwordToggleTint="@color/black"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/black"
            android:transitionName="password_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:onClick="registerUser"
        android:text="@string/create_your_new_account"
        android:textColor="@color/white"
        android:transitionName="button_tran"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/login_now_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textColor="@color/black"
        android:text="@string/already_have_an_account_login_now"
        android:fontFamily="@font/antic"
        android:layout_gravity="center"
        android:elevation="0dp"
        android:transitionName="login_signup_tran" />
    </LinearLayout>
</ScrollView>