<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".VerifyPhoneNo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/cartooncar"/>

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:fontFamily="@font/bungee"
            android:lineSpacingExtra="10dp"
            android:text="@string/verify_phone_number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp"/>

        <TextView
            android:id="@+id/slogan_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:padding="10dp"
            android:text="@string/enter_verification_code_here_if_not_automatically_authenticated"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/enter_otp_here"
            android:textColorHint="#757575"
            app:boxStrokeColor="@color/black"
            app:counterTextColor="@color/black"
            app:hintTextColor="#757575">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:textColor="@color/black">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/verify"
            android:textColor="@color/white"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp" />

    </LinearLayout>

</LinearLayout>